--- a/foot.html
+++ b/foot.html
@@ -30,7 +30,7 @@
           <a href="https://github.com/lazx2024547/lazx2024547.github.io" class="aa" target="_blank">源代码</a>
         </div>
         <br>
-        <p style="margin-block-start: 0em;margin-block-end: 0em;">联系作者：galaxy202454700@Outlook.com</p>
+        <p style="margin-block-start: 0em;margin-block-end: 0em;">联系作者：lazxg547b@Outlook.com</p>
       </div>
       <p class="center">v2024.12.29</p>
     </div>
