--- a/CDQZ.html
+++ b/CDQZ.html
@@ -38,6 +38,13 @@
               <img src="images/logo.png" style="width:210;height:210">
             </a>
           </div>
+          <div style="width:400;height:255;" class="border_div">
+            <a href="cdqz_bls.html" target="_blank" style="text-decoration: none;color:black;">
+              <h2>11班辩论赛</h2>
+              <p style="margin-block-start: 0em;margin-block-end: 0em;"></p>
+              <img src="images/none.png" style="width:210;height:210">
+            </a>
+          </div>
         </div>
         <div>
             <h2>歌曲</h2>
