--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
         <img src="http://jtapi.bendibao.com/ditie/inc/cd/xianluda.gif?2024083115" style="width:210;height:210">
       </a>
     </div>
+    <div style="width:400;height:255;" class="border_div">
+      <a href="cdqz_bls.html" target="_blank" style="text-decoration: none;color:black;">
+        <h2>11班辩论赛</h2>
+        <img src="images/none.png" style="width:210;height:210">
+      </a>
+    </div>
     <div style="border-bottom:2px solid #000;height: 40;"></div>
     <div>
       <h2>歌曲</h2>
