--- a/cdqz_bls.html
+++ b/cdqz_bls.html
@@ -13,8 +13,9 @@
     <div style="width: 5%;float: left;height: 10;"><p>  </p></div>
     <div style="width: 90%;float: left;">
         <div class="center">
-        <h1>成都七中林荫校区2025届11班辩论赛：</h1>           
-        <h1>故事的结局重要吗？</h1>
+            <a href="https://wwqb.lanzout.com/iigjI2k0oomd" target="_blank">音频下载 密码:0000</a>
+            <h1>成都七中林荫校区2025届11班辩论赛：</h1>           
+            <h1>故事的结局重要吗？</h1>
         </div>
         <div class="border_div" style="border-radius: 0px">
             <h3 style="float: left;font-size:1.5em">开场白:</h3>
