--- a/foot.html
+++ b/foot.html
@@ -27,11 +27,11 @@
           <a href="http://www.eastedu.org/" class="aa" target="_blank">东方闻道网校</a>
           <a href="https://appqh86kyei8740.pc.xiaoe-tech.com/" class="aa" target="_blank">郡园学堂</a>
           <a href="https://mindustrygame.github.io/" class="aa" target="_blank">Mindustry</a>
-          <a href="https://github.com/lazx2024547/lazx2024547.github.io" class="aa" target="_blank">源代码</a>
+          <a href="https://github.com/lazx547/lazx547.github.io" class="aa" target="_blank">源代码</a>
         </div>
         <br>
         <p style="margin-block-start: 0em;margin-block-end: 0em;">联系作者：galaxy202454700@Outlook.com</p>
       </div>
-      <p class="center">v2025.1.5</p>
+      <p class="center">v2025.1.12</p>
     </div>
 </body>
