--- a/ZMYH.html
+++ b/ZMYH.html
@@ -1,26 +1,49 @@
-<html><head id="gfloedmbenibfmojhkbhhpomeoeklclh">
-  <title>载梦远航</title>
+    <head> 
+    <title>547的小网站>载梦远航</title>
+    <!-- Metadata -->
+    <meta name="keywords" content="547班, 隆安中学, 成都七中, 东方闻道网校" />
+    <meta name="description" content="隆安中学本部校区高547班官网" />
+    <meta charset="utf-8">
+    <!-- OpenGraph Metadata-->
+    <meta property="og:title" content="547的小网站">
+    <meta property="og:description" content="隆安中学高547班官网" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://lazx2024547.github.io" />
   
-  <link rel="icon" href="2024547.ico" type="image/x-icon">
-  <link rel="stylesheet" async href="./style.css">
-</head>
+    <link rel="icon" href="2024547.ico" type="image/x-icon">
+    <link rel="stylesheet" async href="style.css">
+    </head>
     <body>
-      <object style="border:0px" type="text/x-scriptlet" data="hear.html" width="100%"></object>
-      <a href="index.html" style="font-size: 3em;float:left">主页</a>
-      <a style="font-size: 3em;float:left" class="dis_a">/载梦远航</a>
-        <div class="div_a">
-          <div style="border:1px solid #000;width:600;height:650" class="subd_a">
-            <h2 style="font-size: 2em;margin-block-start: 0em;margin-block-end: 0em;">载梦远航</h2>
-            <a href="https://wwqb.lanzout.com/b00occ700h" target="_blank" style="text-decoration: none;color:black;">点击下载，提取码：0000</a>
-            <img src="https://p2.music.126.net/yQ-PxRIyuciwLP4QAbbucQ==/109951166554570690.jpg?param=1000y1000" style="width:500;height:500">
-            <audio controls="" style="height:90;width:550">
-                <source src="http://music.163.com/song/media/outer/url?id=1889689137.mp3" type="audio/mpeg">
-                <embed style="height:70;width:600" src="ZMYH.mp3">
-            </audio>
-          </div>
-          <div style="border:1px solid #000;" class="subd_a">
-            <object style="border:0px" type="text/x-scriptlet" data="lrc/ZMYH_LRC.html" width=280 height=650></object>
-          </div>
+    <object style="border:0px" type="text/x-scriptlet" data="hear.html" width="100%"></object>
+    <div id="address">
+        <a href="index.html" style="font-size: 3em;float:left">主页</a>
+        <a style="font-size: 3em;float:left" class="dis_a">>载梦远航</a>
+    </div>
+    <div style="width: 100%;height: 60;"></div>
+    <hr>
+    <div class="div_a">
+        <div class="border_div" style="width: 780;height: 620;" id="zmyh">
+            <div style="width: 480;height: 610;float: left;">
+                <div style="height: 10;"></div>
+                <img src="https://p2.music.126.net/yQ-PxRIyuciwLP4QAbbucQ==/109951166554570690.jpg?param=1000y1000" style="width:470;height:470;">
+                <a href="https://wwqb.lanzout.com/b00occ700h" target="_blank">
+                    <h2>载梦远航</h2>
+                    <p>隆安中学校歌</p>
+                </a>   
+                <audio controls="" style="height:60;width:480">
+                    <source src="http://music.163.com/song/media/outer/url?id=1405575019.mp3" type="audio/mpeg">
+                </audio>
+                <div style="height: 20;"></div>
+            </div>
+            <div style="width: 280;height: 610;float: left;">
+                <div style="height: 10;"></div>
+                <div style="width: 280;height: 590;">
+                    <object  style="border:2px solid #000;border-radius: 20px;" type="text/x-scriptlet" data="lrc/ZMYH_LRC.html" width="100%" height="100%"></object>
+                </div>
+            </div>
         </div>
-        <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="100%" height="170"></object>
-</body></html>
+    </div>
+        <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="100%" height="40px"></object>
+    </body>
+</html>
+        
