--- a/about.html
+++ b/about.html
@@ -1,16 +1,28 @@
 <html>
     <head> 
-        <title>关于</title>
-
+        <title>547的小网站>关于</title>
+        <!-- Metadata -->
+        <meta name="keywords" content="547班, 隆安中学, 成都七中, 东方闻道网校" />
+        <meta name="description" content="隆安中学本部校区高547班官网" />
+        <meta charset="utf-8">
+        <!-- OpenGraph Metadata-->
+        <meta property="og:title" content="547的小网站">
+        <meta property="og:description" content="隆安中学高547班官网" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://lazx2024547.github.io" />
+  
         <link rel="icon" href="2024547.ico" type="image/x-icon">
         <link rel="stylesheet" async href="./style.css">
     </head>
-    <body class="center">
+    <body>
         <object style="border:0px" type="text/x-scriptlet" data="hear.html" width="100%"></object>
-        <p>使用GithubPage构建，Github仓库：https://github.com/lazx2024547/lazx2024547.github.io<br>
-            借鉴网页：https://mindustrygame.github.io/<br>
-            主要作者：winMCHG31400@outlook.com<br>
-            联系我们：QQ：2946983031
-        </p>
-        <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="100%" height="170"></object>
-</body>
+        <div id="address">
+            <a href="./index.html" style="font-size: 3em;float:left">主页</a>
+            <a style="font-size: 3em;float:left" class="dis_a">>关于</a>
+        </div>
+        <div style="width: 100%;height: 60;"></div>
+        <hr>
+        <P>QQ：2946983031</p>
+        <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="100%" height="40px"></object>
+    </body>
+</html>
