--- a/foot.html
+++ b/foot.html
@@ -1,37 +1,44 @@
 <hear>
-<style>
-      .center {
-        text-align: center;
-        margin:0; padding:0;
-      }
-      .aa{
-        width:200;
-        text-decoration: none;
-        color:rgb(0, 0, 0);
-        border:1px solid #000;
-      }
-      .aa:hover{
-        color:#5b5a5a
-      }
- </style>
-  </head>
-  <body>
-    <div id="footer" style="height:150;background-color:#DCDCDC;clear:center;text-align:center;">
-      <div class="center">
-        <h3 style="border:0px;margin-block-start: 0.1em;margin-block-end: 0.1em;">相关链接：</h3>
-        <div class="center">
-          <a href="https://afraidskydream.github.io/" class="aa" target="_blank">尸田的星空梦想</a>
-          <a href="http://winmchg31400.github.io/tools" class="aa" target="_blank">winMCHG31400的工具站</a>
-          <a href="https://www.cdqz.net/" class="aa" target="_blank">成都七中官网</a>
-          <a href="https://www.cdqz.net/html/cdqz/html/list.html?menuId=c1b22f946fd447eebd6c3c4b37ba99e5" class="aa" target="_blank">成都七中教育集团</a>
-          <a href="http://www.eastedu.org/" class="aa" target="_blank">东方闻道网校</a>
-          <a href="https://appqh86kyei8740.pc.xiaoe-tech.com/" class="aa" target="_blank">郡园学堂</a>
-          <a href="https://mindustrygame.github.io/" class="aa" target="_blank">Mindustry</a>
-          <a href="https://github.com/lazx547/lazx547.github.io" class="aa" target="_blank">源代码</a>
+    <style>
+        body{
+            margin:0;
+            padding:0;
+        }
+          .center {
+            text-align: center;
+            margin:0; 
+            padding: 0px 0;
+            text-align: center;
+          }
+          .aa{
+            width:200;
+            text-decoration: none;
+            color:rgb(0, 0, 0);
+            border:1px solid #000;
+          }
+          .aa:hover{
+            color:#5b5a5a
+          }
+          p{
+            font-size: 15px;
+            margin-block-start: 0em;
+            margin-block-end: 0em;
+          }
+    </style>
+</head>
+<body>
+    <div id="footer" style="background-color:#DCDCDC;">
+        <div style="float: left;width: 20%;background-color:#DCDCDC;">
+            <img src="images/2024547.jpg" style="width:40px;height:40px;float: left;background-color:#DCDCDC;">
+            <p style="float: left;font-size: 30;">547web</p>
         </div>
-        <br>
-        <p style="margin-block-start: 0em;margin-block-end: 0em;">联系作者：galaxy202454700@Outlook.com</p>
-      </div>
-      <p class="center">v2025.1.12</p>
+        <div style="float: left;width: 40%;background-color:#DCDCDC;" class="center">
+            <p>made with Github Page</p>
+            <p>since 2024.10.1</p>
+        </div>
+        <div style="float: left;width: 40%;background-color:#DCDCDC;" class="center">
+            <p>Email：lazxg547b@Outlook.com</p>
+            <p class="center">v2025.1.21</p>
+        </div>
     </div>
 </body>
