--- a/hear.html
+++ b/hear.html
@@ -14,9 +14,10 @@
 </div>
 <ul>
   <li><a class="dis_a" target="_top" href="index.html">主页</a></li>
-  <li><a class="dis_a" target="_top" href="OurUniversityDream.html">大学目标</a></li>
+  <li><a class="dis_a" target="_top" href="DXMB.html">大学目标</a></li>
   <li><a class="dis_a" target="_top" href="ZMYH.html">载梦远航</a></li>
-  <li><a class="dis_a" target="_top" href="CDQZ.html">成都七中</a></li>
+  <li><a class="dis_a" target="_top" href="WZDH.html">网站导航</a></li>
+  <li><a class="dis_a" target="_top" href="cdqz/index.html">成都七中</a></li>
   <li><a class="dis_a" target="_top" href="about.html">关于</a></li>
 </ul>
 </body>
