--- a/index.html
+++ b/index.html
@@ -1,134 +1,168 @@
 <html>
-  <head> 
-      <title>547的小网站</title>
-      <!-- Metadata -->
-      <meta name="keywords" content="547班, 隆安中学, 成都七中, 东方闻道网校" />
-      <meta name="description" content="隆安中学高547班官网" />
-      <meta charset="utf-8">
-      <!-- OpenGraph Metadata-->
-      <meta property="og:title" content="547的小网站">
-      <meta property="og:description" content="隆安中学高547班官网" />
-      <meta property="og:type" content="website" />
-      <meta property="og:url" content="https://lazx2024547.github.io" />
-
-      <link rel="icon" href="2024547.ico" type="image/x-icon">
-      <link rel="stylesheet" async href="./style.css">
-  </head>
-<body>
-  <object style="border:0px" type="text/x-scriptlet" data="hear.html" width="100%"></object>
-  <div class="center">
-    <h2>欢迎访问547官网</h2>
-    <h1>激情澎湃，筑梦未来<br>
-      自信自律，追求卓越<br>
-      我们是世界547强人才</h1>
-  </div>
-  <div style="background-color:#DCDCDC;height: 258;" class="div_a">  
-    <img src="images/2024547.jpg" width="258" height="258" class="img_ra">
-    <img src="https://p2.music.126.net/yQ-PxRIyuciwLP4QAbbucQ==/109951166554570690.jpg?param=1000y1000" width="258" height="258" class="img_ra">
-  </div>
-  <div style="height:20px"></div>
-  <div style="background-color:#DCDCDC;" class="div_a">
-    <h1>歌曲</h1>
-    <div style="margin-block-start: 0em;margin-block-end: 0em;">
-      <a href="song.html">
-        <div style="margin-block-start: 0em;margin-block-end: 0em;margin: auto;background-color: darkgray;width: 100;border:2px solid #000;border-radius: 10px;">
-        <h3>查看更多</h3>
+    <head> 
+        <title>547的小网站</title>
+        <!-- Metadata -->
+        <meta name="keywords" content="547班, 隆安中学, 成都七中, 东方闻道网校" />
+        <meta name="description" content="隆安中学本部校区高547班官网" />
+        <meta charset="utf-8">
+        <!-- OpenGraph Metadata-->
+        <meta property="og:title" content="547的小网站">
+        <meta property="og:description" content="隆安中学高547班官网" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://lazx2024547.github.io" />
+  
+        <link rel="icon" href="2024547.ico" type="image/x-icon">
+        <link rel="stylesheet" async href="./style.css">
+    </head>
+    <body>
+        <object style="border:0px" type="text/x-scriptlet" data="hear.html" width="100%"></object>
+        <div id="welcome"  class="center">
+            <h1><u>欢迎访问547官网！</u></h1>
         </div>
-      </a>
-    </div>
-    <div style="width:370;height:370;" class="border_div">
-      <a href="ZMYH.html" target="_blank">
-        <h2>载梦远航</h2>
-        <p>隆安中学校歌</p>
-        <img  style="width:300;height:300" src="https://p2.music.126.net/yQ-PxRIyuciwLP4QAbbucQ==/109951166554570690.jpg?param=1000y1000">
-      </a>
-    </div>
-    <div style="width:370;height:370;" class="border_div">
-      <a href="WXX.html" target="_blank">
-       <h2>我相信</h2>
-       <p>2027届年级歌</p>
-        <img  style="width:300;height:300" src="https://p2.music.126.net/eFkucc5ADDrFgO3qhXDEoA==/109951169273137120.jpg?param=1000y1000">
-      </a>
-    </div>
-    <div style="height:20px"></div>
-  </div>
-  <div style="height:20px"></div>
-  <div id="CDQZ" class="center">  
-    <div style="width:500;height:300" class="border_div">
-      <a href="OurUniversityDream.html" target="_blank" class="div_a" style="overflow:hidden;text-decoration: none;color:black;">
-        <h2>我们的大学目标</h2>
-        <img  style="width:250;height:128;float: left;overflow:hidden" a=""src="https://www.sysu.edu.cn/__local/3/92/73/313C8C5A6A94AEE36CE6460EED4_E9652D77_1804E.jpg?e=.jpg">
-        <img  style="width:250;height:128;float: left;overflow: hidden;" a="" src="https://news.scu.edu.cn/__local/F/5D/58/B9B093402B523C68FF4F5FCA40C_D1967579_66B97.jpg">
-        <img  style="width:250;height:128;float: left;overflow: hidden;" a=""src="https://www.hust.edu.cn/__local/9/9C/1F/8CC0623E4C715600840C6307D53_9ED7990C_17B75.jpg">
-        <img  style="width:250;height:128;float: left;overflow: hidden;" a=""src="https://www.zju.edu.cn/_upload/article/images/08/0f/7eb44c3c42f8a99bf1fa26a38f01/6ad49963-21bd-40e0-8296-cb3da5c00662.jpg">
-      </a>
-    </div>
-  </div>
-  <div style="height:20px"></div>
-  <div style="background-color:#DCDCDC;" class="div_a">
-    <h1>紧跟七中</h1>
-    <div style="margin-block-start: 0em;margin-block-end: 0em;">
-      <a href="CDQZ.html">
-        <div style="margin-block-start: 0em;margin-block-end: 0em;margin: auto;background-color: darkgray;width: 100;border:2px solid #000;border-radius: 10px;">
-        <h3>查看全部</h3>
+        <div class="center" style="width: 35%;float: left;">
+            <img src="https://p2.music.126.net/yQ-PxRIyuciwLP4QAbbucQ==/109951166554570690.jpg?param=1000y1000" width="258" height="258" class="img_ra">
         </div>
-      </a>
-  </div>
-    <div style="width:400;height:255;" class="border_div">
-      <a href="cdqz_video.html" target="_blank" style="text-decoration: none;color:black;">
-        <h2>成都七中宣传视频</h2>
-        <img src="https://www.cdqz.net/file/B28FCD69389A469F85EE7E22BCEA100D/4ad69cc6d0544fe2bbe434c72205939c" style="width:290;height:210">
-      </a>
-    </div>
-    <div style="width:400;height:255;" class="border_div">
-      <a href="ChengduMetro.html" target="_blank" style="text-decoration: none;color:black;">
-        <h2>成都地铁线路图</h2>
-        <img src="http://jtapi.bendibao.com/ditie/inc/cd/xianluda.gif?2024083115" style="width:210;height:210">
-      </a>
-    </div>
-    <div style="width:400;height:255;" class="border_div">
-      <a href="cdqz_bls.html" target="_blank" style="text-decoration: none;color:black;">
-        <h2>11班辩论赛</h2>
-        <img src="images/none.png" style="width:210;height:210">
-      </a>
-    </div>
-    <div style="border-bottom:2px solid #000;height: 40;"></div>
-    <div>
-      <h2>歌曲</h2>
-      <div style="margin-block-start: 0em;margin-block-end: 0em;">
-          <a href="cdqz_song.html">
-            <div style="margin-block-start: 0em;margin-block-end: 0em;margin: auto;background-color: darkgray;width: 100;border:2px solid #000;border-radius: 10px;">
-            <h3>查看更多</h3>
+        <div  style="width: 30%;float: left;height:256;padding: 20px 0;" class="center">
+            <div class="border_div" style="border-radius: 20px;">
+                <h1>激情澎湃，筑梦未来<br>
+                自信自律，追求卓越<br>
+                肯干善为，相与有成<br>
+                我们是世界547强人才</h1>
             </div>
-          </a>
-      </div>
-      <div style="width:350;height:400" class="border_div">
-        <h3 style="margin-block-start: 0em;margin-block-end: 0em;">流光-林荫校区第42届运动会会歌</h3>
-        <img src="https://p2.music.126.net/LDrQrxqnT-CMbzWDCxmXFw==/109951166571802471.jpg?param=1000y1000" style="width:300;height:300">
-        <audio controls="" style="height:70;width:350">
-            <source src="http://music.163.com/song/media/outer/url?id=1889371442.mp3" type="audio/mpeg">
-            <embed style="height:70;width:600" src="HASL.mp3">
-        </audio>
-      </div>
-      <div style="width:350;height:400" class="border_div">
-        <h3 style="margin-block-start: 0em;margin-block-end: 0em;">笑斩风浪-林荫校区第41届运动会会歌</h3>
-        <img src="https://p2.music.126.net/GtzE5KxCvZv1PPb-ljXVOQ==/109951165408835755.jpg?param=1000y1000" style="width:300;height:300">
-        <audio controls="" style="height:70;width:350">
-            <source src="http://music.163.com/song/media/outer/url?id=1489295744.mp3" type="audio/mpeg">
-            <embed style="height:70;width:600" src="HASL.mp3">
-        </audio>
-      </div>
-      <div style="width:350;height:400" class="border_div">
-        <h3 style="margin-block-start: 0em;margin-block-end: 0em;">云卷青华-高新校区第40届校运会会歌</h3>
-        <img src="https://p2.music.126.net/9amUMfe7w3XuIR8wNGMEiA==/109951164506528237.jpg?param=1000y1000" style="width:300;height:300">
-        <audio controls="" style="height:70;width:350">
-            <source src="http://music.163.com/song/media/outer/url?id=1405575019.mp3" type="audio/mpeg">
-            <embed style="height:70;width:600" src="HASL.mp3">
-        </audio>
-      </div>
-  </div>
-  </div>
-  <div style="height:20px"></div>
-  <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="100%" height="170"></object>
-</body>
+        </div>
+        <div  class="center" style="width: 35%;float: left;">
+            <img src="images/2024547.jpg" width="258" height="258" class="img_ra">
+        </div>
+        <br>
+        <div id="DXMB" class="center">
+            <div style="margin: auto;width: 1600;height:700; border-radius: 40px;overflow: hidden;" class="border_div">
+                <div style="float: left;">
+                    <h1 style="position: relative;left: 20;">我们的大学目标</h1>
+                </div>
+                <div style="width: 170;margin-block-start: 0.67em;" class="button_div">
+                    <a href="DXMB.html" style="float: right;position: relative;left: -20;">
+                        <p style="font-size: 2em;">查看全部</p>
+                    </a>
+                </div>
+                <div class="div_a">
+                    <div style="width:500;height:297" class="border_div">
+                        <a href="https://www.pku.edu.cn/" target="_blank" class="center">
+                            <h2>北京大学</h2>
+                            <img src="https://fdcb.pku.edu.cn/images/f1d37508f2ea4fd9b135785409ce3621.jpg" style="width:500;height:257">
+                        </a>
+                    </div>
+                        <div style="width:500;height:297" class="border_div">
+                        <a href="https://www.scu.edu.cn/" target="_blank" class="center">
+                            <h2>四川大学</h2>
+                            <img src="https://news.scu.edu.cn/__local/F/5D/58/B9B093402B523C68FF4F5FCA40C_D1967579_66B97.jpg" style="width:500;height:257">
+                        </a>
+                    </div>
+                        <div style="width:500;height:297" class="border_div">
+                        <a href="https://www.xmu.edu.cn/" target="_blank" class="center">
+                            <h2>厦门大学</h2>
+                            <img src="https://www.xmu.edu.cn/images/2024shengqi.jpg" style="width:500;height:257">
+                        </a>
+                    </div>
+                    <div style="width:500;height:297" class="border_div">
+                        <a href="https://www.zju.edu.cn/" target="_blank" class="center">
+                            <h2>浙江大学</h2>
+                            <img src="https://www.zju.edu.cn/_upload/article/images/08/0f/7eb44c3c42f8a99bf1fa26a38f01/6ad49963-21bd-40e0-8296-cb3da5c00662.jpg" style="width:500;height:257">
+                        </a>
+                    </div><div style="width:500;height:297" class="border_div">
+                        <a href="https://www.fudan.edu.cn/main.htm" target="_blank" class="center">
+                            <h2>复旦大学</h2>
+                            <img src="https://www.fudan.edu.cn/_upload/tpl/00/0e/14/template14/images/fdjj.png" style="width:500;height:257">
+                        </a>
+                    </div><div style="width:500;height:297" class="border_div">
+                        <a href="https://www.nju.edu.cn/" target="_blank" class="center">
+                            <h2>南京大学</h2>
+                            <img src="https://www.nju.edu.cn/images/jjpic3.png" style="width:500;height:257">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br style="height: 20;">
+        <div id="song" class="center">
+            <div style="width: 1600;height:720; border-radius: 40px;margin: auto;" class="border_div">
+                <div style="float: left;">
+                    <h1 style="position: relative;left: 20;">歌曲</h1>
+                </div>
+                <br>
+                <div class="div_a">
+                    <div class="border_div" style="width: 780;height: 620;" id="zmyh">
+                        <div style="width: 480;height: 610;float: left;">
+                            <div style="height: 10;"></div>
+                            <img src="https://p2.music.126.net/yQ-PxRIyuciwLP4QAbbucQ==/109951166554570690.jpg?param=1000y1000" style="width:470;height:470;">
+                            <h2>载梦远航</h2>
+                            <p>隆安中学校歌</p>
+                            <audio controls="" style="height:60;width:480">
+                                <source src="http://music.163.com/song/media/outer/url?id=1405575019.mp3" type="audio/mpeg">
+                            </audio>
+                            <div style="height: 20;"></div>
+                        </div>
+                        <div style="width: 280;height: 610;float: left;">
+                            <div style="height: 10;"></div>
+                            <div style="width: 280;height: 590;">
+                                <object  style="border:2px solid #000;border-radius: 20px;" type="text/x-scriptlet" data="lrc/ZMYH_LRC.html" width="100%" height="100%"></object>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border_div" style="width: 780;height: 620;" id="wxx">
+                        <div style="width: 480;height: 610;float: left;">
+                            <div style="height: 10;"></div>
+                            <img src="https://p2.music.126.net/eFkucc5ADDrFgO3qhXDEoA==/109951169273137120.jpg?param=1000y1000" style="width:470;height:470;border-radius: 5%;">
+                            <h2>我相信</h2>
+                            <p>2027届年级歌</p>
+                            <audio controls="" style="height:60;width:480">
+                                <source src="http://music.163.com/song/media/outer/url?id=176403.mp3" type="audio/mpeg">
+                            </audio>
+                            <div style="height: 20;"></div>
+                        </div>
+                        <div style="width: 280;height: 610;float: left;">
+                            <div style="height: 10;"></div>
+                            <div style="width: 280;height: 590;">
+                                <object  style="border:2px solid #000;border-radius: 20px;" type="text/x-scriptlet" data="lrc/WXX_LRC.html" width="100%" height="100%"></object>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+            </div> 
+        </div>
+        <br style="height: 20;">
+        <div id="CDQZ" class="center">
+            <div style="margin: auto;width: 1600;height:400; border-radius: 40px;overflow: hidden;" class="border_div">
+                <div style="float: left;">
+                    <h1 style="position: relative;left: 20;">成都七中</h1>
+                </div>
+                <div style="width: 170;margin-block-start: 0.67em;" class="button_div">
+                    <a href="cdqz/index.html" style="float: right;position: relative;left: -20;">
+                        <p style="font-size: 2em;">查看全部</p>
+                    </a>
+                </div>
+                <div class="div_a" >
+                    <div style="width:500;height:297" class="border_div">
+                        <a href="cdqz/CDQZ_video.html" target="_blank" class="center">
+                            <h2>成都七中宣传视频</h2>
+                            <img src="images/cdqz_video.jpg" style="width:500;height:250">
+                        </a>
+                    </div>
+                    <div style="width:500;height:297" class="border_div">
+                        <a href="cdqz/GWBL.html" target="_blank" class="center">
+                            <h2>成都七中官网崩了</h2>
+                            <img src="images/gwbl.jpg" style="width:250;height:250">
+                        </a>
+                    </div>
+                    <div style="width:500;height:297" class="border_div">
+                        <a href="cdqz/BLS.html" target="_blank" class="center">
+                            <h2>辩论赛：故事的结局重要吗</h2>
+                            <img src="images/none2.png" style="width:500;height:250">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="100%" height="40px"></object>
+    </body>
 </html>
