--- a/cdqz/index.html
+++ b/cdqz/index.html
@@ -1,1 +1,92 @@
+<html>
+    <head> 
+        <title>547的小网站>成都七中</title>
+        <!-- Metadata -->
+        <meta name="keywords" content="547班, 隆安中学, 成都七中, 东方闻道网校" />
+        <meta name="description" content="隆安中学本部校区高547班官网" />
+        <meta charset="utf-8">
+        <!-- OpenGraph Metadata-->
+        <meta property="og:title" content="547的小网站">
+        <meta property="og:description" content="隆安中学高547班官网" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://lazx2024547.github.io" />
+  
+        <link rel="icon" href="../2024547.ico" type="image/x-icon">
+        <link rel="stylesheet" async href="../style.css">
+    </head>
+    <body>
+        <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="100%"></object>
+        <div id="address">
+            <a href="../index.html" style="font-size: 3em;float:left">主页</a>
+            <a style="font-size: 3em;float:left" class="dis_a">>成都七中</a>
+        </div>
+        <div style="width: 100%;height: 60;"></div>
+        <hr>
+        <div id="news" class="center" style="width: 1600;">
+            <div class="div_a">
+                <div style="width:500;height:297" class="border_div">
+                    <a href="CDQZ_video.html"class="center">
+                        <h2>成都七中宣传视频</h2>
+                        <img src="../images/cdqz_video.jpg" style="width:500;height:250">
+                    </a>
+                </div>
+                <div style="width:500;height:297" class="border_div">
+                    <a href="GWBL.html"class="center">
+                        <h2>成都七中官网崩了</h2>
+                        <img src="../images/gwbl.jpg" style="width:250;height:250">
+                    </a>
+                </div>
+                <div style="width:500;height:297" class="border_div">
+                    <a href="BLS.html"class="center">
+                        <h2>辩论赛：故事的结局重要吗</h2>
+                        <img src="../images/none2.png" style="width:500;height:250">
+                    </a>
+                </div>
+                <div style="width:500;height:297" class="border_div">
+                    <a href="CDDT.html"class="center">
+                        <h2>成都轨道交通线网图</h2>
+                        <img src="https://jtapi.bendibao.com/ditie/inc/cd/xianluda.gif?2024083115" style="width:250;height:250">
+                    </a>
+                </div>
+                <div style="width:500;height:297;" class="border_div">
+                    <a href="WDBFQ_XZ.html" >
+                        <h2>闻道课件播放器下载</h2>
+                        <img src="../images/none2.png" style="width:500;height:250">
+                    </a>
+                </div>
+                <div style="width:500;height:297;" class="border_div">
+                    <a href="2025_11.html" >
+                        <h2>林荫校区2025届11班</h2>
+                        <p style="margin-block-start: 0em;margin-block-end: 0em;"></p>
+                        <img src="../images/none2.png" style="width:500;height:250">
+                    </a>
+                </div>
+                <div style="width:500;height:297;" class="border_div">
+                    <a href="https://www.douyin.com/user/MS4wLjABAAAA_pCO4N4sYGjW2eAa4eSiFNNxhQ4XgtXhgqQ8VdiKeSJoMxGnu_16W7As0Sd3iUm5?from_tab_name=main" target="_blank">
+                        <h2>黄天予抖音</h2>
+                        <p style="margin-block-start: 0em;margin-block-end: 0em;"></p>
+                        <img src="https://p3-pc.douyinpic.com/img/aweme-avatar/tos-cn-i-0813c001_oABj2BQPLhqtKEAErAii0ALZL1IyvtkAVAIka~c5_300x300.jpeg?from=2956013662" style="width:250;height:250">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <br style="height: 20;">
+        <div id="song" class="center">
+            <div style="margin: auto;width: 1600;height:700; border-radius: 40px;overflow: hidden;" class="border_div">
+                <div style="float: left;">
+                    <h1 style="position: relative;left: 20;">歌曲</h1>
+                </div>
+                <div style="width: 170;margin-block-start: 0.67em;" class="button_div">
+                    <a href="song.html" style="float: right;position: relative;left: -20;">
+                        <p style="font-size: 2em;">查看全部</p>
+                    </a>
+                </div>
+                <div class="div_a">
+                </div>
+            </div>
+        </div>
+        <object style="border:0px" type="text/x-scriptlet" data="../foot.html" width="100%" height="40px"></object>
+    </body>
+</html>
+
 
