--- a/index.html
+++ b/index.html
@@ -15,26 +15,30 @@
         <link rel="stylesheet" async href="./style.css">
     </head>
     <body>
-        <object style="border:0px" type="text/x-scriptlet" data="hear.html" width="100%"></object>
+        <div style="background-color:#DCDCDC;height: 122;" class="center">
+            <object style="border:0px" type="text/x-scriptlet" data="hear.html" width="1800"></object>
+        </div>
         <div id="welcome"  class="center">
             <h1><u>欢迎访问547官网！</u></h1>
         </div>
-        <div class="center" style="width: 35%;float: left;">
-            <img src="https://p2.music.126.net/yQ-PxRIyuciwLP4QAbbucQ==/109951166554570690.jpg?param=1000y1000" width="258" height="258" class="img_ra">
-        </div>
-        <div  style="width: 30%;float: left;height:256;padding: 20px 0;" class="center">
-            <div class="border_div" style="border-radius: 20px;">
-                <h1>激情澎湃，筑梦未来<br>
-                自信自律，追求卓越<br>
-                肯干善为，相与有成<br>
-                我们是世界547强人才</h1>
+        <div style="width: 1600;" class="center">
+            <div class="center" style="width: 35%;float: left;">
+                <img src="https://p2.music.126.net/yQ-PxRIyuciwLP4QAbbucQ==/109951166554570690.jpg?param=1000y1000" width="258" height="258" class="img_ra">
+            </div>
+            <div  style="width: 30%;float: left;height:256;padding: 20px 0;" class="center">
+                <div class="border_div" style="border-radius: 20px;">
+                    <h1>激情澎湃，筑梦未来<br>
+                    自信自律，追求卓越<br>
+                    肯干善为，相与有成<br>
+                    我们是世界547强人才</h1>
+                </div>
+            </div>
+            <div  class="center" style="width: 35%;float: left;">
+                <img src="images/2024547.jpg" width="258" height="258" class="img_ra">
             </div>
         </div>
-        <div  class="center" style="width: 35%;float: left;">
-            <img src="images/2024547.jpg" width="258" height="258" class="img_ra">
-        </div>
         <br>
-        <div id="DXMB" class="center">
+        <div id="DXMB" class="center" style="clear: both;">
             <div style="margin: auto;width: 1600;height:700; border-radius: 40px;overflow: hidden;" class="border_div">
                 <div style="float: left;">
                     <h1 style="position: relative;left: 20;">我们的大学目标</h1>
@@ -94,8 +98,10 @@
                         <div style="width: 480;height: 610;float: left;">
                             <div style="height: 10;"></div>
                             <img src="https://p2.music.126.net/yQ-PxRIyuciwLP4QAbbucQ==/109951166554570690.jpg?param=1000y1000" style="width:470;height:470;">
-                            <h2>载梦远航</h2>
-                            <p>隆安中学校歌</p>
+                            <a href="ZMYH.html" target="_blank">
+                                <h2>载梦远航</h2>
+                                <p>隆安中学校歌</p>
+                            </a>
                             <audio controls="" style="height:60;width:480">
                                 <source src="http://music.163.com/song/media/outer/url?id=1405575019.mp3" type="audio/mpeg">
                             </audio>
@@ -112,8 +118,10 @@
                         <div style="width: 480;height: 610;float: left;">
                             <div style="height: 10;"></div>
                             <img src="https://p2.music.126.net/eFkucc5ADDrFgO3qhXDEoA==/109951169273137120.jpg?param=1000y1000" style="width:470;height:470;border-radius: 5%;">
-                            <h2>我相信</h2>
-                            <p>2027届年级歌</p>
+                            <a href="https://wwp.lanzoup.com/iM5GV2bre52h" target="_blank">
+                                <h2>我相信</h2>
+                                <p>2027届年级歌</p>
+                            </a>
                             <audio controls="" style="height:60;width:480">
                                 <source src="http://music.163.com/song/media/outer/url?id=176403.mp3" type="audio/mpeg">
                             </audio>
