--- a/WZDH.html
+++ b/WZDH.html
@@ -14,16 +14,18 @@
     <link rel="stylesheet" async href="style.css">
     </head>
     <body>
-        <div id="header" style="background-color:#DCDCDC;height:82" class="center">
-            <div id="menu" style="width:82px;height:82px;float:left;">
-              <a href="index.html">
-                <img src="images/2024547.jpg" style="width:82px;height:82px;">
-              </a>
-            </div>
-            <div style="height:82px;float:left;"> 
-              <h1>547网站导航</h1> 
-            </div>
-        </div>
+      <div class="center">
+        <div id="header" style="background-color:#DCDCDC;height:82;width: 1800;" class="center">
+          <div id="menu" style="width:82px;height:82px;float:left;">
+            <a href="index.html">
+              <img src="images/2024547.jpg" style="width:82px;height:82px;">
+            </a>
+          </div>
+          <div style="height:82px;float:left;"> 
+            <h1>547网站导航</h1> 
+          </div>
+      </div>
+      </div>
         <p>building...</p>
         <object style="border:0px" type="text/x-scriptlet" data="./foot.html" width="100%" height="40px"></object>
     </body>
