--- a/hear.html
+++ b/hear.html
@@ -12,7 +12,7 @@
       <h1>隆安中学高547班官网</h1> 
     </div>
 </div>
-<ul>
+<ul style="height: 40;">
   <li><a class="dis_a" target="_top" href="index.html">主页</a></li>
   <li><a class="dis_a" target="_top" href="DXMB.html">大学目标</a></li>
   <li><a class="dis_a" target="_top" href="ZMYH.html">载梦远航</a></li>
