--- a/cdqz/CDDT.html
+++ b/cdqz/CDDT.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" async href="../style.css">
 </head>
 <body>
-    <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="100%"></object>
+    <div style="background-color:#DCDCDC;height: 122;" class="center">
+        <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="1800"></object>
+    </div>
     <div id="address">
         <a href="../index.html" style="font-size: 3em;float:left">主页</a>
         <a href="index.html" style="font-size: 3em;float:left">>成都七中</a>
