--- a/cdqz/index.html
+++ b/cdqz/index.html
@@ -15,7 +15,9 @@
         <link rel="stylesheet" async href="../style.css">
     </head>
     <body>
-        <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="100%"></object>
+        <div style="background-color:#DCDCDC;height: 122;" class="center">
+            <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="1800"></object>
+        </div>
         <div id="address">
             <a href="../index.html" style="font-size: 3em;float:left">主页</a>
             <a style="font-size: 3em;float:left" class="dis_a">>成都七中</a>
@@ -72,7 +74,7 @@
         </div>
         <br style="height: 20;">
         <div id="song" class="center">
-            <div style="margin: auto;width: 1600;height:700; border-radius: 40px;overflow: hidden;" class="border_div">
+            <div style="margin: auto;width: 1600;height:900; border-radius: 40px;overflow: hidden;" class="border_div">
                 <div style="float: left;">
                     <h1 style="position: relative;left: 20;">歌曲</h1>
                 </div>
@@ -82,6 +84,63 @@
                     </a>
                 </div>
                 <div class="div_a">
+                    <div style="width:350;height:400" class="border_div">
+                        <h3 style="margin-block-start: 0em;margin-block-end: 0em;">破潮-成都七中第44届田径运动会会歌</h3>
+                        <img src="https://p2.music.126.net/ef7MIZwu5x9fQUKc8bO4Bw==/109951170392176098.jpg?param=1000y1000" style="width:300;height:300">
+                        <audio controls="" style="height:70;width:350" jm_neat="926408705">
+                            <source src="http://music.163.com/song/media/outer/url?id=2667189093.mp3" type="audio/mpeg">
+                        </audio>
+                      </div>
+                    <div style="width:350;height:400" class="border_div">
+                        <h3 style="margin-block-start: 0em;margin-block-end: 0em;">远方-林荫校区第43届田径运动会会歌</h3>
+                        <img src="https://p2.music.126.net/mvCjwn8Rgep7wMEpUHRJWA==/109951167979420453.jpg?param=1000y1000" style="width:300;height:300">
+                        <audio controls="" style="height:70;width:350" jm_neat="926408705">
+                            <source src="http://music.163.com/song/media/outer/url?id=1990593810.mp3" type="audio/mpeg">
+                        </audio>
+                      </div>
+                      <div style="width:350;height:400" class="border_div">
+                        <h3 style="margin-block-start: 0em;margin-block-end: 0em;">流光-林荫校区第42届运动会会歌</h3>
+                        <img src="https://p2.music.126.net/LDrQrxqnT-CMbzWDCxmXFw==/109951166571802471.jpg?param=1000y1000" style="width:300;height:300">
+                        <audio controls="" style="height:70;width:350">
+                            <source src="http://music.163.com/song/media/outer/url?id=1889371442.mp3" type="audio/mpeg">
+                        </audio>
+                      </div>
+                      <div style="width:350;height:400" class="border_div">
+                        <h3 style="margin-block-start: 0em;margin-block-end: 0em;">笑斩风浪-林荫校区第41届运动会会歌</h3>
+                        <img src="https://p2.music.126.net/GtzE5KxCvZv1PPb-ljXVOQ==/109951165408835755.jpg?param=1000y1000" style="width:300;height:300">
+                        <audio controls="" style="height:70;width:350">
+                            <source src="http://music.163.com/song/media/outer/url?id=1489295744.mp3" type="audio/mpeg">
+                        </audio>
+                      </div>
+                      <div style="width:350;height:400" class="border_div">
+                        <h3 style="margin-block-start: 0em;margin-block-end: 0em;">永不言弃的梦-高新校区第41届校运会会歌</h3>
+                        <img src="https://p2.music.126.net/VUMSLyviuXI3jyLUjgQ_PQ==/109951165916390119.jpg?param=1000y1000" style="width:300;height:300">
+                        <audio controls="" style="height:70;width:350">
+                            <source src="http://music.163.com/song/media/outer/url?id=1839614274.mp3" type="audio/mpeg">
+                        </audio>
+                      </div>
+                      <div style="width:350;height:400" class="border_div">
+                        <h3 style="margin-block-start: 0em;margin-block-end: 0em;">云卷青华-高新校区第40届校运会会歌</h3>
+                        <img src="https://p2.music.126.net/9amUMfe7w3XuIR8wNGMEiA==/109951164506528237.jpg?param=1000y1000" style="width:300;height:300">
+                        <audio controls="" style="height:70;width:350">
+                            <source src="http://music.163.com/song/media/outer/url?id=1405575019.mp3" type="audio/mpeg">
+                        </audio>
+                      </div>
+                      <div style="width:350;height:400" class="border_div">
+                        <h3 style="margin-block-start: 0em;margin-block-end: 0em;">韶华之光-高新校区第39届校运会会歌</h3>
+                        <img src="https://p2.music.126.net/9amUMfe7w3XuIR8wNGMEiA==/109951164506528237.jpg?param=1000y1000" style="width:300;height:300">
+                        <audio controls="" style="height:70;width:350">
+                          <source src="http://music.163.com/song/media/outer/url?id=1406813981.mp3" type="audio/mpeg">
+                          <embed style="height:70;width:600" src="HASL.mp3">
+                        </audio>
+                      </div>
+                      <div style="width:350;height:400" class="border_div">
+                        <h3 style="margin-block-start: 0em;margin-block-end: 0em;">青春无悔-第38届运动会会歌</h3>
+                        <img src="https://p2.music.126.net/Xg29-S-h3wWQKDW-7PPusg==/109951163050816993.jpg?param=1000y1000" style="width:300;height:300">
+                        <audio controls="" style="height:70;width:350">
+                            <source src="http://music.163.com/song/media/outer/url?id=517301555.mp3" type="audio/mpeg">
+                        </audio>
+                      </div>
                 </div>
             </div>
         </div>
