--- a/cdqz/BLS.html
+++ b/cdqz/BLS.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div style="background-color:#DCDCDC;height: 122;" class="center">
-            <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="1800"></object>
+            <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="1100"></object>
         </div>
         <div id="address">
             <a href="../index.html" style="font-size: 3em;float:left">主页</a>
@@ -25,7 +25,7 @@
         </div>
         <div style="width: 100%;height: 60;"></div>
         <hr>
-        <div class="center" style="width: 1600;">
+        <div class="center" style="width: 1080;">
             <div class="center">
                 <h1>成都七中林荫校区2025届11班辩论赛：</h1>           
                 <h1>故事的结局重要吗？</h1>
@@ -159,6 +159,8 @@
             </div>
         </div>
     </div>     
-    <object style="border:0px" type="text/x-scriptlet" data="../foot.html" width="100%" height="40px"></object>
+    <div style="background-color:#DCDCDC;height: 40;" class="center">
+        <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="40" style="overflow: hidden;"></object>
+    </div>
     </body>
 </html>
