--- a/cdqz/song.html
+++ b/cdqz/song.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div style="background-color:#DCDCDC;height: 122;" class="center">
-            <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="1800"></object>
+            <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="1100"></object>
         </div>
         <div id="address" style="clear: both;">
             <a href="../index.html" style="font-size: 3em;float:left">主页</a>
@@ -26,7 +26,7 @@
         <div style="width: 100%;height: 60;"></div>
         <hr>
         <div id="XYH" class="center">
-            <div style="width: 1600;border-radius: 40px;margin: auto;" class="border_div">
+            <div style="width: 800;border-radius: 40px;margin: auto;" class="border_div">
                 <div style="float: left;">
                     <h1 style="position: relative;left: 20;">校运会会歌</h1>
                 </div>
@@ -183,17 +183,19 @@
         </div>
         <div style="height: 20;"></div>
         <div id="XYH" class="center">
-            <div style="width: 1600;border-radius: 40px;margin: auto;" class="border_div">
+            <div style="width: 1080;border-radius: 40px;margin: auto;" class="border_div">
                 <div style="float: left;">
                     <h1 style="position: relative;left: 20;">inxer音乐创作社</h1>
                 </div>
-                <div style="width: 100%;height: 90;"></div>
+                <div style="width: 1080;height: 90;"></div>
                 <hr>
                 <div class="div_a">
                     <p>building...</p>
                 </div>
             </div> 
         </div>
-        <object style="border:0px" type="text/x-scriptlet" data="../foot.html" width="100%" height="40px"></object>
+        <div style="background-color:#DCDCDC;height: 40;" class="center">
+            <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="40" style="overflow: hidden;"></object>
+        </div>
     </body>
 </html>
