--- a/cdqz/2025_11.html
+++ b/cdqz/2025_11.html
@@ -1,6 +1,6 @@
 <html>
     <head> 
-        <title>547的小网站>成都七中>宣传视频</title>
+        <title>547的小网站>成都七中>林荫25届11班名单</title>
         <!-- Metadata -->
         <meta name="keywords" content="547班, 隆安中学, 成都七中, 东方闻道网校" />
         <meta name="description" content="隆安中学本部校区高547班官网" />
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div style="background-color:#DCDCDC;height: 122;" class="center">
-            <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="1800"></object>
+            <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="1100"></object>
         </div>
         <div id="address">
             <a href="../index.html" style="font-size: 3em;float:left">主页</a>
@@ -27,9 +27,11 @@
         <hr>
         <div style="border:1px solid #000;width: 600;" class="div_a">
             <h1>成都七中林荫校区2025届11班学生名单</h1>
-            <object style="border: 2px solid #000" type="text/x-scriptlet" data="../file/25111.html" width="200" height="1450" class="subd_a"></object>
-            <object style="border: 2px solid #000;" type="text/x-scriptlet" data="../file/25112.html" width="200" height="1450" class="subd_a"></object>
+            <object style="border: 2px solid #000" type="text/x-scriptlet" data="../file/25111.html" width="200" height="1500" class="subd_a"></object>
+            <object style="border: 2px solid #000;" type="text/x-scriptlet" data="../file/25112.html" width="200" height="1500" class="subd_a"></object>
         </div>
-        <object style="border:0px" type="text/x-scriptlet" data="../foot.html" width="100%" height="40px"></object>
+        <div style="background-color:#DCDCDC;height: 40;" class="center">
+            <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="40" style="overflow: hidden;"></object>
+        </div>
     </body>
 </html>
