--- a/cdqz/CDDT.html
+++ b/cdqz/CDDT.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div style="background-color:#DCDCDC;height: 122;" class="center">
-        <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="1800"></object>
+        <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="1100"></object>
     </div>
     <div id="address">
         <a href="../index.html" style="font-size: 3em;float:left">主页</a>
@@ -24,11 +24,13 @@
     </div>
     <div style="width: 100%;height: 60;"></div>
     <hr>
-    <div class="center" style="width: 1600;">
+    <div class="center" style="width: 1080;">
         <a href="http://jtapi.bendibao.com/ditie/inc/cd/xianluda.gif?2024083115">
             <img src="http://jtapi.bendibao.com/ditie/inc/cd/xianluda.gif?2024083115"width="100%">
         </a>
     </div>
-    <object style="border:0px" type="text/x-scriptlet" data="../foot.html" width="100%" height="40px"></object>
+    <div style="background-color:#DCDCDC;height: 40;" class="center">
+        <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="40" style="overflow: hidden;"></object>
+    </div>
     </body>
 </html>
