--- a/cdqz/CDQZ_video.html
+++ b/cdqz/CDQZ_video.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div style="background-color:#DCDCDC;height: 122;" class="center">
-            <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="1800"></object>
+            <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="1100"></object>
         </div>
         <div id="address">
             <a href="../index.html" style="font-size: 3em;float:left">主页</a>
@@ -26,10 +26,12 @@
         <div style="width: 100%;height: 60;"></div>
         <hr>
         <div class="center">
-            <video width="1600"controls="">
+            <video width="1080"controls="">
                 <source src="https://www.cdqz.net/html/cdqz2.mp4" type="video/mp4">
             </video>
         </div>      
-        <object style="border:0px" type="text/x-scriptlet" data="../foot.html" width="100%" height="40px"></object>
+        <div style="background-color:#DCDCDC;height: 40;" class="center">
+            <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="40" style="overflow: hidden;"></object>
+        </div>
     </body>
 </html>
