--- a/cdqz/GWBL.html
+++ b/cdqz/GWBL.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div style="background-color:#DCDCDC;height: 122;" class="center">
-            <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="1800"></object>
+            <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="1100"></object>
         </div>
         <div id="address">
             <a href="../index.html" style="font-size: 3em;float:left">主页</a>
@@ -25,10 +25,12 @@
         </div>
         <div style="width: 100%;height: 60;"></div>
         <hr>
-        <div class="center" style="width: 1600;">
+        <div class="center" style="width: 1080;">
             <p style="font-size: 2em;">2025年1月18日起成都七中官网突然无法访问，20日恢复正常</p>
             <img src="../images/gwbl.jpg" style="width:500;height:500">
         </div>
-        <object style="border:0px" type="text/x-scriptlet" data="../foot.html" width="100%" height="40px"></object>
+        <div style="background-color:#DCDCDC;height: 40;" class="center">
+            <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="40" style="overflow: hidden;"></object>
+        </div>
     </body>
 </html>
