--- a/cdqz/index.html
+++ b/cdqz/index.html
@@ -13,10 +13,15 @@
   
         <link rel="icon" href="../2024547.ico" type="image/x-icon">
         <link rel="stylesheet" async href="../style.css">
+        <style>
+            h2{
+                font-size: 2em
+            }
+        </style>
     </head>
     <body>
         <div style="background-color:#DCDCDC;height: 122;" class="center">
-            <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="1800"></object>
+            <object style="border:0px" type="text/x-scriptlet" data="../hear.html" width="1100"></object>
         </div>
         <div id="address">
             <a href="../index.html" style="font-size: 3em;float:left">主页</a>
@@ -24,18 +29,12 @@
         </div>
         <div style="width: 100%;height: 60;"></div>
         <hr>
-        <div id="news" class="center" style="width: 1600;">
+        <div id="news" class="center" style="width: 1080;">
             <div class="div_a">
                 <div style="width:500;height:297" class="border_div">
                     <a href="CDQZ_video.html"class="center">
                         <h2>成都七中宣传视频</h2>
                         <img src="../images/cdqz_video.jpg" style="width:500;height:250">
-                    </a>
-                </div>
-                <div style="width:500;height:297" class="border_div">
-                    <a href="GWBL.html"class="center">
-                        <h2>成都七中官网崩了</h2>
-                        <img src="../images/gwbl.jpg" style="width:250;height:250">
                     </a>
                 </div>
                 <div style="width:500;height:297" class="border_div">
@@ -74,7 +73,7 @@
         </div>
         <br style="height: 20;">
         <div id="song" class="center">
-            <div style="margin: auto;width: 1600;height:900; border-radius: 40px;overflow: hidden;" class="border_div">
+            <div style="margin: auto;width: 1080; border-radius: 40px;overflow: hidden;" class="border_div">
                 <div style="float: left;">
                     <h1 style="position: relative;left: 20;">歌曲</h1>
                 </div>
@@ -144,7 +143,9 @@
                 </div>
             </div>
         </div>
-        <object style="border:0px" type="text/x-scriptlet" data="../foot.html" width="100%" height="40px"></object>
+        <div style="background-color:#DCDCDC;height: 40;" class="center">
+            <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="40" style="overflow: hidden;"></object>
+        </div>
     </body>
 </html>
 
