--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
         <meta property="og:title" content="547的小网站">
         <meta property="og:description" content="隆安中学高547班官网" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://lazx2024547.github.io" />
+        <meta property="og:url" content="https://lazx547.us.kg" />
   
         <link rel="icon" href="2024547.ico" type="image/x-icon">
         <link rel="stylesheet" async href="./style.css">
     </head>
     <body>
         <div style="background-color:#DCDCDC;height: 122;" class="center">
-            <object style="border:0px" type="text/x-scriptlet" data="hear.html" width="1100"></object>
+            <div style="max-width: 1200;min-width: 600;margin: 0 auto;">
+                <object style="border:0px;min-width: 600;max-width: 1200;" type="text/x-scriptlet" data="hear.html" width="100%"></object>
+            </div>
         </div>
         <div id="welcome"  class="center">
             <h1><u>欢迎访问547官网！</u></h1>
@@ -103,7 +105,7 @@
                                 <p>隆安中学校歌</p>
                             </a>
                             <audio controls="" style="height:30;width:350">
-                                <source src="http://music.163.com/song/media/outer/url?id=1889689137.mp3" type="audio/mpeg">
+                                <source src="http://music.163.com/song/media/outer/url?id=1405575019.mp3" type="audio/mpeg">
                             </audio>
                             <div style="height: 20;"></div>
                         </div>
@@ -152,33 +154,6 @@
                 </div>
                 <div class="center" style="width: 290;padding: 86px 0;float: left;font-size: 31px;">
                     <p>为每一位学生的<br>终身发展奠基</p>
-                </div>
-            </div>
-        </div>
-        <br style="height: 20;">
-        <div id="CDQZ" class="center">
-            <div style="margin: auto;width: 1080;border-radius: 40px;overflow: hidden;" class="border_div">
-                <div style="float: left;">
-                    <h1 style="position: relative;left: 20;">成都七中</h1>
-                </div>
-                <div style="width: 100;margin-block-start: 0.67em;" class="button_div">
-                    <a href="cdqz/index.html">
-                        <p style="font-size: 20px;">查看全部</p>
-                    </a>
-                </div>
-                <div class="div_a" >
-                    <div style="width:310;height:181" class="border_div">
-                        <a href="cdqz/CDQZ_video.html" target="_blank" class="center">
-                            <h2>成都七中宣传视频</h2>
-                            <img src="images/cdqz_video.jpg" style="width:310;height:155;border-radius: 19px;">
-                        </a>
-                    </div>
-                    <div style="width:310;height:181" class="border_div">
-                        <a href="cdqz/BLS.html" target="_blank" class="center">
-                            <h2>辩论赛：故事的结局重要吗</h2>
-                            <img src="images/none2.png" style="width:310;height:155;border-radius: 19px;">
-                        </a>
-                    </div>
                 </div>
             </div>
         </div>
