--- a/WZDH.html
+++ b/WZDH.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="547的小网站">
     <meta property="og:description" content="隆安中学高547班官网" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://lazx2024547.github.io" />
+    <meta property="og:url" content="https://lazx547.us.kg" />
   
     <link rel="icon" href="2024547.ico" type="image/x-icon">
     <link rel="stylesheet" async href="style.css">
