--- a/ZMYH.html
+++ b/ZMYH.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="547的小网站">
     <meta property="og:description" content="隆安中学高547班官网" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://lazx2024547.github.io" />
+    <meta property="og:url" content="https://lazx547.us.kg" />
   
     <link rel="icon" href="2024547.ico" type="image/x-icon">
     <link rel="stylesheet" async href="style.css">
@@ -33,7 +33,7 @@
                     <p>隆安中学校歌</p>
                 </a>   
                 <audio controls="" style="height:60;width:480">
-                    <source src="http://music.163.com/song/media/outer/url?id=1889689137.mp3" type="audio/mpeg">
+                    <source src="http://music.163.com/song/media/outer/url?id=1405575019.mp3" type="audio/mpeg">
                 </audio>
                 <div style="height: 20;"></div>
             </div>
