--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
         <meta property="og:title" content="547的小网站">
         <meta property="og:description" content="隆安中学高547班官网" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://lazx2024547.github.io" />
+        <meta property="og:url" content="https://lazx547.us.kg" />
   
         <link rel="icon" href="2024547.ico" type="image/x-icon">
         <link rel="stylesheet" async href="./style.css">
@@ -24,7 +24,14 @@
         </div>
         <div style="width: 100%;height: 60;"></div>
         <hr>
-        <P>QQ：2946983031</p>
+        <div class="center">
+            <p>QQ：2946983031</p>
+            <a href="protect/student.html" target="_blank">
+                <div>
+                    <h2>547班学生名单</h2>
+                </div>
+            </a>
+        </div>
         <div style="background-color:#DCDCDC;height: 40;" class="center">
             <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="40" style="overflow: hidden;"></object>
         </div>
