--- a/foot.html
+++ b/foot.html
@@ -34,7 +34,7 @@
         </div>
         <div style="float: left;width: 40%;background-color:#DCDCDC;" class="center">
             <a href="https://pages.github.com/" target="_blank"><p style="color: #000;text-decoration: none;">made withGithub Page</p></a>
-            <p>since 2024.10.1</p>
+            <p>since 2024.10.1 in lazx2024547.github.io</p>
         </div>
         <div style="float: left;width: 40%;background-color:#DCDCDC;" class="center">
             <p>Email：lazxg547b@Outlook.com</p>
