--- a/ZMYH.html
+++ b/ZMYH.html
@@ -1,5 +1,5 @@
     <head> 
-    <title>547的小网站>载梦远航</title>
+    <title>547>载梦远航</title>
     <!-- Metadata -->
     <meta name="keywords" content="547班, 隆安中学, 成都七中, 东方闻道网校" />
     <meta name="description" content="隆安中学本部校区高547班官网" />
@@ -14,22 +14,20 @@
     <link rel="stylesheet" async href="style.css">
     </head>
     <body>
-        <div style="background-color:#DCDCDC;height: 122;" class="center">
-            <object style="border:0px" type="text/x-scriptlet" data="hear.html" width="1100"></object>
+        <div style="background-color:#DCDCDC;height: 102;" class="center">
+            <div style="max-width: 1200;min-width: 600;margin: 0 auto;">
+                <object style="border:0px;min-width: 600;max-width: 1200;" type="text/x-scriptlet" data="hear.html" width="100%"></object>
+            </div>
         </div>
-    <div id="address">
-        <a href="index.html" style="font-size: 3em;float:left">主页</a>
-        <a style="font-size: 3em;float:left" class="dis_a">>载梦远航</a>
-    </div>
-    <div style="width: 100%;height: 60;"></div>
-    <hr>
-    <div class="div_a">
-        <div class="border_div" style="width: 780;height: 620;" id="zmyh">
+        <br style="height: 20;">
+        <div class="center" style="width: 780;height: 600;background-color: #f6f6f7;margin: auto;" id="zmyh">
+            <div style="float: left;border-left: 6px solid #162e6a;clear: both;">
+                <h1 style="position: relative;left: 20;;">载梦远航</h1>
+            </div>
+            <div style="width: 780;height: 43;"><img src=""></div>
             <div style="width: 480;height: 610;float: left;">
-                <div style="height: 10;"></div>
-                <img src="https://p2.music.126.net/yQ-PxRIyuciwLP4QAbbucQ==/109951166554570690.jpg?param=1000y1000" style="width:470;height:470;">
                 <a href="https://wwqb.lanzout.com/b00occ700h" target="_blank">
-                    <h2>载梦远航</h2>
+                    <img src="https://p2.music.126.net/yQ-PxRIyuciwLP4QAbbucQ==/109951166554570690.jpg?param=1000y1000" style="width:470;height:470;">
                     <p>隆安中学校歌</p>
                 </a>   
                 <audio controls="" style="height:60;width:480">
@@ -37,17 +35,18 @@
                 </audio>
                 <div style="height: 20;"></div>
             </div>
-            <div style="width: 280;height: 610;float: left;">
-                <div style="height: 10;"></div>
-                <div style="width: 280;height: 590;">
-                    <object  style="border:2px solid #000;border-radius: 20px;" type="text/x-scriptlet" data="lrc/ZMYH_LRC.html" width="100%" height="100%"></object>
+            <div style="width: 280;height: 580;float: left;">
+                <div style="width: 280;height: 550;">
+                    <object  style="border:2px solid #b6b6b6;border-radius: 20px;" type="text/x-scriptlet" data="lrc/ZMYH_LRC.html" width="100%" height="100%"></object>
                 </div>
             </div>
         </div>
-    </div>
-    <div style="background-color:#DCDCDC;height: 40;" class="center">
-        <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="40" style="overflow: hidden;"></object>
-    </div>
+        <div style="width: auto;height: 20;"></div>
+        <div>
+            <div style="background-color:#DCDCDC;height: 40;margin: 0;padding: 0;" class="center">
+                <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="40" style="overflow: hidden;position: relative;"></object>                
+            </div>
+        </div>
     </body>
 </html>
         
