--- a/hear.html
+++ b/hear.html
@@ -2,20 +2,41 @@
   <link rel="stylesheet" async href="./style.css">
 </hear>
 <body>
-  <div id="header" style="background-color:#DCDCDC;height:82" class="center">
-    <div id="menu" style="width:82px;height:82px;float:left;">
-      <a href="index.html">
-        <img src="images/2024547.jpg" style="width:82px;height:82px;">
+  <div id="header" style="background-color:#DCDCDC;height:60" class="center">
+    <div id="menu" style="width:60px;height:60px;float:left;">
+      <a href="index.html" target="_top">
+        <img src="images/2024547.jpg" style="width:60px;height:60px;" class="ico">
       </a>
     </div>
-    <div style="height:82px;float:left;"> 
-      <h1 style="font-size: 40px;margin-block-start: 11px;margin-block-end: 21px;">隆安中学高547班官网</h1> 
+    <div style="height:60px;float:left;"> 
+      <h1 style="font-size: 40px;margin-block-start: 5px;">隆安中学高547班官网</h1> 
     </div>
-</div>
+    <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
+      <a href="https://github.com/lazx547/lazx547.github.io" target="_blank">
+        <img src="images/github.png" style="width:35px;height:35px;">
+      </a>
+    </div>
+    <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
+      <a href="https://lazx547.us.kg" target="_blank" class="img_a">
+        <img src="images/us_kg.png" style="width:40px;height:40px;">
+      </a>
+    </div>
+    <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
+      <a href="https://lazx547.github.io" target="_blank">
+        <img src="images/githubpage.png" style="width:40px;height:40px;">
+      </a>
+    </div>
+    <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
+      <a href="https://lazx547-github-io.pages.dev/" target="_blank">
+        <img src="images/cloudflare.png" style="width:40px;height:40px;">
+      </a>
+    </div>
+  </div>
+  <hr style="border-width:0;color:#999999;background-color:#999999;margin-block-start: 0;margin-block-end: 0;height: 2;">
 <ul style="height: 40;">
-  <li><a class="dis_a" target="_top" href="index.html">主页</a></li>
-  <li><a class="dis_a" target="_top" href="DXMB.html">大学目标</a></li>
-  <li><a class="dis_a" target="_top" href="ZMYH.html">载梦远航</a></li>
-  <li><a class="dis_a" target="_top" href="about.html">关于</a></li>
+  <li><a class="dis_a" target="_top" href="index.html" style="padding: 10px 0;width: 60;">主页</a></li>
+  <li><a class="dis_a" target="_top" href="DXMB.html" style="padding: 10px 0;width: 80;">大学目标</a></li>
+  <li><a class="dis_a" target="_top" href="ZMYH.html" style="padding: 10px 0;width: 80;">载梦远航</a></li>
+  <li><a class="dis_a" target="_top" href="about.html" style="padding: 10px 0;width: 60;">关于</a></li>
 </ul>
 </body>
