--- a/about.html
+++ b/about.html
@@ -79,6 +79,35 @@
             <br style="height: 20;">
             <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: #f6f6f7;">
                 <div style="float: left;border-left: 6px solid #162e6a">
+                    <h1 style="position: relative;left: 20;">程序</h1>
+                </div>
+                <br style="clear: both;">
+                <div class="div_a">
+                    <div class="subd_a" style="width: 300;">
+                        <h2>547clock</h2>
+                        <img src="images/547clock.jpg" style="width:80px;height:80px;">
+                        <p>654的小时钟</p>
+                        <p>
+                            <a href="https://github.com/lazx547/547clock" target="_blank">查看源代码 </a>或
+                            <a href="https://github.com/lazx547/547clock/releases" target="_blank">下载</a>
+                        </p>
+                        
+                    </div>
+                    <div class="subd_a" style="width: 300;">
+                        <h2>547choice</h2>
+                        <img src="images/547rand.jpg" style="width:80px;height:80px;">
+                        <p>547的抽号器</p>
+                        <p>
+                            <a href="https://github.com/lazx547/547choice" target="_blank">查看源代码 </a>或
+                            <a href="https://github.com/lazx547/547choice/releases" target="_blank">下载</a>
+                        </p>
+                    </div>
+                </div>
+                <br style="height: 10;">
+            </div>
+            <br style="height: 20;">
+            <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: #f6f6f7;">
+                <div style="float: left;border-left: 6px solid #162e6a">
                     <h1 style="position: relative;left: 20;">受保护的网页</h1>
                 </div>
                 <br style="clear: both;">
@@ -115,6 +144,7 @@
                 <br style="clear: both;">
                 <p>QQ：2946983031</p>
                 <p>邮箱：<a href="mailto:lazxg547b@outlook.com">lazxg547b@outlook.com</a><br><a href="mailto:2946983031@qq.com">2946983031@qq.com</a></p>
+                <p>Github：<a href="https://github.com/lazx547" target="_blank">lazx547</a></p>
             </div>
             <br style="height: 20;">
         </div>
