--- a/foot.html
+++ b/foot.html
@@ -33,12 +33,12 @@
             <p style="float: left;font-size: 30;">547web</p>
         </div>
         <div style="float: left;width: 40%;background-color:#DCDCDC;" class="center">
-            <a href="https://pages.github.com/" target="_blank"><p style="color: #000;text-decoration: none;">made withGithub Page</p></a>
+            <p>lazx547</p>
             <p>since 2024.10.1 in lazx2024547.github.io</p>
         </div>
         <div style="float: left;width: 40%;background-color:#DCDCDC;" class="center">
             <p>Email：lazxg547b@Outlook.com</p>
-            <p class="center">v2025.1.21</p>
+            <p class="center">v2025.2.23</p>
         </div>
     </div>
 </body>
