--- a/dark/about.html
+++ b/dark/about.html
@@ -67,11 +67,11 @@
                         <p class="pp">us.kg域名有时无法解析</p>
                     </div>
                     <div class="subd_a" style="width: 300;">
-                        <a href="https://lazx547-github-io.pages.dev/" target="_blank">
+                        <a href="https://lazxg547b.pages.dev/" target="_blank">
                             <h2 class="mh">Cloudflare Page</h2>
                             <img src="../images/cloudflare.png" style="width:80px;height:80px;">
                             <br>
-                            <p><u>lazx547-github-io.pages.dev</u></p>
+                            <p><u>lazxg547b.pages.dev/</u></p>
                         </a>
                         <p class="pp">这个链接指向的是Cloudflare的服务器</p>
                         <p class="pp">Cloudflare Page速度较快</p>
@@ -88,8 +88,8 @@
                 <div class="div_a">
                     <div class="subd_a" style="width: 300;">
                         <h2>547clock</h2>
-                        <img src="../images/547clock.jpg" style="width:80px;height:80px;">
-                        <p class="pp">654的小时钟</p>
+                        <img src="../images/547clock.png" style="width:80px;height:80px;">
+                        <p class="pp">547的小时钟</p>
                         <p class="pp">
                             <a href="https://github.com/lazx547/547clock" target="_blank">查看源代码 </a>或
                             <a href="https://github.com/lazx547/547clock/releases" target="_blank">下载</a>
@@ -98,11 +98,20 @@
                     </div>
                     <div class="subd_a" style="width: 300;">
                         <h2>547choice</h2>
-                        <img src="../images/547rand.jpg" style="width:80px;height:80px;">
+                        <img src="../images/547choice.png" style="width:80px;height:80px;">
                         <p class="pp">547的抽号器</p>
                         <p class="pp">
                             <a href="https://github.com/lazx547/547choice" target="_blank">查看源代码 </a>或
                             <a href="https://github.com/lazx547/547choice/releases" target="_blank">下载</a>
+                        </p>
+                    </div>
+                    <div class="subd_a" style="width: 300;">
+                        <h2>547woodenfish</h2>
+                        <img src="../images/547weendenfish.png" style="width:80px;height:80px;">
+                        <p class="pp">547的木鱼</p>
+                        <p class="pp">
+                            <a href="https://github.com/lazx547/547moodenfish" target="_blank">查看源代码 </a>或
+                            <a href="https://github.com/lazx547/547moodenfish/releases" target="_blank">下载</a>
                         </p>
                     </div>
                 </div>
