--- a/dark/index.html
+++ b/dark/index.html
@@ -161,9 +161,24 @@
                 </a>
             </div>
         </div>
+        
         <br style="height: 20;">
-        <div style="background-color:#161618;height: 40;" class="center">
-            <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="40" style="overflow: hidden;"></object>
+        <div class="center">
+            <div style="margin: auto;width: 1080;overflow: hidden;background-color: #242427;" class="center">
+                <div style="float: left;border-left: 6px solid #0062d2">
+                    <h1 style="position: relative;left: 20;">软件</h1>
+                </div>
+                <br>
+                <div class="div_a">
+                    <iframe height="167" frameborder="0" src="https://itch.io/embed/3610421" width="552"><a href="https://lazx547.itch.io/547clock">547clock by lazx547</a></iframe>
+                    <br style="height: 15;">
+                    <iframe width="552" height="167" frameborder="0" src="https://itch.io/embed/3610450"><a href="https://lazx547.itch.io/547rand">547抽号器 by lazx547</a></iframe>
+                </div>
+            </div>
+        </div>
+        <br style="height: 20;">
+        <div style="background-color:#161618;height: 45;" class="center">
+            <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="45" style="overflow: hidden;"></object>
         </div>
     </body>
 </html>
