--- a/dark/about.html
+++ b/dark/about.html
@@ -77,24 +77,13 @@
                 <br style="clear: both;">
                 <div class="div_a">
                     <div class="subd_a" style="width: 300;">
-                        <h2>547DesktopToo</h2>
-                        <img src="../images/547dt.png" style="width:80px;height:80px;">
-                        <p class="pp">547DesktopTool</p>
-                        <p class="pp">
-                            <a href="https://github.com/lazx547/547DesktopTool" target="_blank">查看源代码 </a>或
-                            <a href="https://github.com/lazx547/547DesktopTool/releases" target="_blank">下载</a>
-                        </p>
-                        
-                    </div>
-                    <div class="subd_a" style="width: 300;">
                         <h2>547clock</h2>
                         <img src="../images/547clock.png" style="width:80px;height:80px;">
                         <p class="pp">547的小时钟</p>
                         <p class="pp">
                             <a href="https://github.com/lazx547/547clock" target="_blank">查看源代码 </a>或
-                            <a href="https://github.com/lazx547/547clock/releases" target="_blank">下载</a>
+                            <a href="https://lazx547.itch.io/547clock" target="_blank">下载</a>
                         </p>
-                        
                     </div>
                     <div class="subd_a" style="width: 300;">
                         <h2>547choice</h2>
@@ -102,7 +91,7 @@
                         <p class="pp">547的抽号器</p>
                         <p class="pp">
                             <a href="https://github.com/lazx547/547choice" target="_blank">查看源代码 </a>或
-                            <a href="https://github.com/lazx547/547choice/releases" target="_blank">下载</a>
+                            <a href="https://lazx547.itch.io/547rand" target="_blank">下载</a>
                         </p>
                     </div>
                 </div>
@@ -154,8 +143,8 @@
             </div>
             <br style="height: 20;">
         </div>
-        <div style="background-color:#161618;height: 40;" class="center">
-            <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="40" style="overflow: hidden;"></object>
+        <div style="background-color:#161618;height: 45;" class="center">
+            <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="45" style="overflow: hidden;"></object>
         </div>
     </body>
 </html>
